--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -107,4 +107,16 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+    <repository>
+      <id>releases</id>
+      <name>Releases</name>
+      <url>http://192.168.1.142:8081/nexus/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>releases</id>
+      <name>Releases</name>
+      <url>http://192.168.1.142:8081/nexus/content/repositories/releases</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
